<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.dicodingeventapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_eventDetailActivity"
            app:destination="@id/eventDetailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.dicoding.dicodingeventapp.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming">
        <action
            android:id="@+id/action_navigation_dashboard_to_eventDetailActivity"
            app:destination="@id/eventDetailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.dicoding.dicodingeventapp.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished">
        <action
            android:id="@+id/action_navigation_notifications_to_eventDetailActivity"
            app:destination="@id/eventDetailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.dicodingeventapp.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite"/>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.dicoding.dicodingeventapp.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting"/>

    <activity
        android:id="@+id/eventDetailActivity"
        android:name="com.dicoding.dicodingeventapp.ui.detail.DetailActivity"
        android:label="EventDetailActivity" />
</navigation>